--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -37,7 +37,7 @@
         <item>支付宝测试</item>
         <item>充值</item>
         <item>商城种类</item>
-        <item>我的账户</item>
+        <item></item>
         <item></item>
         <item></item>
         <item></item>
@@ -68,7 +68,7 @@
         <item>search</item>
         <item>search</item>
         <item>search</item>
-        <item>search</item>
+        <item>other</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
