--- a/app/src/main/res/layout/activity_info_setting.xml
+++ b/app/src/main/res/layout/activity_info_setting.xml
@@ -1,106 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/color_bg">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color_bg">
 
     <RelativeLayout
-            android:id="@+id/search_title_part"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_title"
-            android:background="@color/color_title_bg">
+        android:id="@+id/search_title_part"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_title"
+        android:background="@color/color_title_bg">
 
         <ImageView
-                android:id="@+id/search_back_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="12dp"
-                android:padding="8dp"
-                android:src="@drawable/btn_back"/>
+            android:id="@+id/search_back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:padding="8dp"
+            android:src="@drawable/btn_back" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/str_title_info_set"
-                android:textColor="@color/color_view_title_text"
-                android:textSize="@dimen/font_content_size_2"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/str_title_info_set"
+            android:textColor="@color/color_view_title_text"
+            android:textSize="@dimen/font_content_size_2" />
 
     </RelativeLayout>
 
     <View
-            android:id="@+id/search_line_1"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_below="@id/search_title_part"
-            android:background="#d3d4d8"/>
+        android:id="@+id/search_line_1"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/search_title_part"
+        android:background="#d3d4d8" />
 
     <LinearLayout
-            android:id="@+id/ll_info_setting_company"
-            android:layout_below="@id/search_line_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical">
+        android:id="@+id/ll_info_setting_company"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_line_1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="快递公司："
-                android:textSize="14sp"
-                android:textColor="@color/black"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="快递公司："
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <Spinner
-                android:id="@+id/sp_info_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:id="@+id/sp_info_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/color_bg"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <LinearLayout
-            android:id="@+id/ll_info_setting_area"
-            android:layout_below="@id/ll_info_setting_company"
+        android:id="@+id/ll_info_setting_area"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_info_setting_company"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp">
+            android:text="服务区域："
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="服务区域："
-                android:textSize="14sp"
-                android:textColor="@color/black"/>
-
-        <TextView
-                android:id="@+id/tv_info_setting_area_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="请选择"
-                android:textSize="14sp"
-                android:textColor="@color/color_red"/>
+            android:id="@+id/tv_info_setting_area_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请选择"
+            android:textColor="@color/color_red"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <Button
-            android:id="@+id/btn_info_setting_save"
-            android:layout_below="@id/ll_info_setting_area"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="保存"
-            android:layout_centerHorizontal="true"/>
+        android:id="@+id/btn_info_setting_save"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_below="@id/ll_info_setting_area"
+        android:layout_centerHorizontal="true"
+        android:text="保存"
+        android:textColor="@color/color_view_text"
+        android:textSize="16sp" />
 
     <com.express56.xq.widget.ChoosePlaceLayout
-            android:id="@+id/cpl_info_setting"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="202dp"
-            android:visibility="gone"/>
+        android:id="@+id/cpl_info_setting"
+        android:layout_width="match_parent"
+        android:layout_height="202dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
