--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -1,51 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/color_white"
-                android:orientation="vertical"
-                tools:context="com.express56.xq.fragment.MainFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color_bg">
 
     <RelativeLayout
-        android:id="@+id/mall_title_part"
+        android:id="@+id/search_title_part"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_title"
         android:background="@color/color_title_bg">
 
         <TextView
-            android:id="@+id/title_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/str_title_mall"
+            android:text="@string/str_title_mall_type"
             android:textColor="@color/color_view_title_text"
-            android:textSize="@dimen/font_content_size_3"/>
+            android:textSize="@dimen/font_content_size_2" />
 
     </RelativeLayout>
 
     <View
-        android:id="@+id/mall_line_1"
+        android:id="@+id/search_line_1"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_below="@id/mall_title_part"
-        android:background="#cccccc"/>
+        android:background="#d3d4d8" />
 
-    <ImageView android:id="@+id/imageview_waiting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/waiting"
-        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_mall_type"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/str_please_wait"
-        android:layout_marginTop="10dp"
-        android:textColor="#333333"
-        android:textSize="@dimen/font_content_size_3"
-        android:layout_below="@id/imageview_waiting"/>
-
-</RelativeLayout>
+</LinearLayout>
