--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -17,7 +17,7 @@
         <item>快递单扫码</item>
         <item>快递单查询</item>
         <item>我的快递</item>
-        <item></item>
+        <item>充值</item>
         <item></item>
         <item></item>
         <item></item>
@@ -36,7 +36,7 @@
         <item>接单</item>
         <item>支付宝测试</item>
         <item>充值</item>
-        <item>商城种类</item>
+        <item></item>
         <item></item>
         <item></item>
         <item></item>
@@ -50,7 +50,7 @@
         <item>scan</item>
         <item>search</item>
         <item>myexpress</item>
-        <item>other</item>
+        <item>search</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
@@ -67,7 +67,7 @@
         <item>search</item>
         <item>search</item>
         <item>search</item>
-        <item>search</item>
+        <item>other</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
