--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/logo_view_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher" />
+        android:background="@mipmap/ic_launcher" />
 
 </RelativeLayout>
