--- a/app/src/main/res/layout/activity_myexpress.xml
+++ b/app/src/main/res/layout/activity_myexpress.xml
@@ -8,7 +8,7 @@
         android:id="@+id/search_title_part"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_title"
-        android:background="@color/color_title_bg"
+        android:background="@color/title"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
@@ -27,15 +27,20 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/str_title_my_express"
-            android:textColor="@color/color_view_title_text"
+            android:textColor="@color/white"
             android:textSize="@dimen/font_content_size_2"/>
 
         <Button
             android:id="@+id/btn_place_order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:text="@string/str_my_express_place_order"/>
+            android:text="@string/str_my_express_place_order"
+            android:background="@drawable/btn_normal"
+            android:layout_centerVertical="true"
+            android:textColor="@color/color_view_title_text"
+            android:layout_marginRight="10dp"
+            android:textSize="14sp"/>
 
     </RelativeLayout>
 
