--- a/app/src/main/res/layout/activity_place_order_show.xml
+++ b/app/src/main/res/layout/activity_place_order_show.xml
@@ -9,7 +9,7 @@
         android:id="@+id/search_title_part"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_title"
-        android:background="@color/color_title_bg">
+        android:background="@color/title">
 
         <ImageView
             android:id="@+id/search_back_btn"
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/str_title_place_order_edit"
-            android:textColor="@color/color_view_title_text"
+            android:textColor="@color/white"
             android:textSize="@dimen/font_content_size_2" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:text="选择报价（8）"
-            android:textColor="@color/color_red"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_centerVertical="true"/>
 
