--- a/app/src/main/res/layout/layout_mall_type_item.xml
+++ b/app/src/main/res/layout/layout_mall_type_item.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/iv_mall_type_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="5dip"
         android:background="@drawable/search"/>
 
